<resources>
    <string name="cardio_app_name">CardFlight</string>
    <string name="cardio_name">Name:</string>
    <string name="cardio_name_hint">NAME</string>
    <string name="cardio_number_hint">1234 5678 1234 5678</string>
    <string name="cardio_cvv_hint">1234</string>
    <string name="cardio_expires_hint">MM / YYYY</string>
    <string name="cardio_number">Number:</string>
    <string name="cardio_cvv">CVV:</string>
    <string name="cardio_expires">Expires:</string>
    <string name="cardio_done">Done</string>
    <string name="cardio_cancel">Cancel</string>
    <string name="cardio_reset">Reset</string>
    <string name="title_activity_manual_entry">ManualEntryActivity</string>
	<string name="error_invalid_card_no">Please enter a valid card number</string>
	<string name="expiration_field_desc">Credit Card Expiration Field</string>
	<string name="expiration_field_hint">MM/YY</string>
	<string name="card_mock">1234 5678 9012 3456</string>
	<string name="credit_card_number_field_description">Credit Card Number Field</string>
	<string name="_cvv_">" CVV "</string>
    <string name="zip_code">" ZIP "</string>
    <string name="bt_pair_instructions">Select the Bluetooth Reader from the list below</string>
    <string name="bt_mag_reader_paired">Bluetooth Reader ready to be linked</string>
    <string name="attempt_auto_connect">Attempting to automatically find and link the Bluetooth Reader.</string>
    <string name="bluetooth_problems_prompt">If you\'re having problems connecting, try the resetting the Bluetooth Reader:</string>
    <string name="bluetooth_help_one">Turn the Bluetooth Reader off. Do this by pressing the ON/OFF switch for several seconds until no lights are blinking</string>
    <string name="bluetooth_help_two">Turn the Bluetooth Reader back on. Press and hold the Bluetooth reader\'s ON switch for 7 seconds or until you see a flashing, blue light</string>
    <string name="bluetooth_wizard_welcome">Welcome to the Bluetooth reader linking wizard.</string>
    <string name="bluetooth_wizzard_get_started">To get started, press and hold the Bluetooth reader\'s ON switch for 7 seconds or until you see a flashing, blue light.</string>
    <string name="bluetooth_pair_instructions_two">If the device does not appear, be sure that the Bluetooth reader is turned ON.</string>
    <string name="bluetooth_pair_instructions_one">Find and tap on the device that contains \'BT Mag\'. </string>
    <string name="emptyList">- Searching for Readers -</string>
    <string name="waiting_for_card">Please insert/swipe/tap card now.</string>
    <string name="no_card_detected">No card detected. Please insert or swipe card again and press check card.</string>
    <string name="icc_card_inserted">ICC Card Inserted</string>
    <string name="card_inserted">Card Inserted (Not ICC)</string>
    <string name="bad_swipe">Bad Swipe. Please swipe again and press check card.</string>
    <string name="card_swiped">Card Swiped: </string>
    <string name="mag_head_fail">Magnetic head fail</string>
    <string name="card_no_response">Check card no response</string>
    <string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
    <string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
    <string name="use_icc_card">Please use ICC card</string>
    <string name="format_id">Format ID: </string>
    <string name="masked_pan">Masked PAN: </string>
    <string name="pan">PAN:</string>
    <string name="expiry_date">Expiry Date: </string>
    <string name="cardholder_name">Cardholder Name: </string>
    <string name="ksn">KSN: </string>
    <string name="pin_ksn">PIN KSN:</string>
    <string name="track_ksn">Track KSN:</string>
    <string name="emv_ksn">EMV KSN:</string>
    <string name="epb">EPB:</string>
    <string name="uid">UID:</string>
    <string name="csn">CSN:</string>
    <string name="service_code">Service Code: </string>
    <string name="track_1_length">Track 1 Length: </string>
    <string name="track_2_length">Track 2 Length: </string>
    <string name="track_3_length">Track 3 Length: </string>
    <string name="encrypted_tracks">Encrypted Tracks: </string>
    <string name="encrypted_track_1">Encrypted Track 1: </string>
    <string name="encrypted_track_2">Encrypted Track 2: </string>
    <string name="encrypted_track_3">Encrypted Track 3: </string>
    <string name="partial_track">Partial Track: </string>
    <string name="track_encoding">Track Encoding:</string>
    <string name="final_message">Final Message:</string>
    <string name="random_number">Random Number:</string>
    <string name="encrypted_working_key">Encrypted Working Key:</string>
    <string name="card_data">Card Data: </string>
    <string name="start_emv_fail">Start EMV failed</string>
    <string name="start_emv_success">Start EMV success</string>
    <string name="app_version">App Version: </string>
    <string name="bootloader_version">Bootloader Version: </string>
    <string name="firmware_version">Firmware Version: </string>
    <string name="usb">USB: </string>
    <string name="charge">Charge: </string>
    <string name="battery_level">Battery Level: </string>
    <string name="battery_percentage">Battery Percentage:</string>
    <string name="hardware_version">Hardware Version: </string>
    <string name="supported_track">Supported Track: </string>
    <string name="track_1_supported">Track 1 Supported: </string>
    <string name="track_2_supported">Track 2 Supported: </string>
    <string name="track_3_supported">Track 3 Supported: </string>
    <string name="unknown">Unknown</string>
    <string name="set_amount">Set Amount</string>
    <string name="enter_pin">Please enter PIN</string>
    <string name="request_check_online_connectivity">Requested to check online connectivity</string>
    <string name="request_online_process">Online process requested</string>
    <string name="select_online_response">Please select an online response.</string>
    <string name="replied_connected">Replied connected.</string>
    <string name="replied_success">Replied success.</string>
    <string name="replied_failed">Replied failed.</string>
    <string name="replied">Replied:</string>
    <string name="batch_data">Batch Data:\n</string>
    <string name="transaction_log">Transaction Log:\n</string>
    <string name="reversal_data">Reversal Data:\n</string>
    <string name="please_select_app">Please select app</string>
    <string name="transaction_result">Transaction Result</string>
    <string name="transaction_approved">Approved</string>
    <string name="transaction_terminated">Terminated</string>
    <string name="transaction_declined">Declined</string>
    <string name="transaction_cancel">Cancel</string>
    <string name="transaction_capk_fail">Fail (CAPK fail)</string>
    <string name="transaction_not_icc">Fail (Not ICC card)</string>
    <string name="transaction_card_blocked">Card blocked</string>
    <string name="transaction_device_error">Device Error</string>
    <string name="icc_card_removed">ICC card removed</string>
    <string name="tlv_list">TLV List:\n</string>
    <string name="advice_process">Advice Process.</string>
    <string name="call_your_bank">Please call your bank</string>
    <string name="request_terminal_time">Request Terminal Time. Replied </string>
    <string name="confirm_amount">Confirm amount</string>
    <string name="amount">Amount</string>
    <string name="amount_ok">Amount OK?</string>
    <string name="approved">Approved</string>
    <string name="cancel_or_enter">Cancel or Enter</string>
    <string name="card_error">Card error</string>
    <string name="declined">Declined</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="insert_card">Please insert card</string>
    <string name="not_accepted">Not accepted</string>
    <string name="pin_ok">PIN OK</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="processing_error">Processing error</string>
    <string name="remove_card">Please remove card</string>
    <string name="use_chip_reader">Please use chip reader</string>
    <string name="use_mag_stripe">Please use mag stripe</string>
    <string name="try_again">Please try again</string>
    <string name="refer_payment_device">Please refer to your payment device</string>
    <string name="try_another_interface">Please try another interface</string>
    <string name="online_required">Online required</string>
    <string name="processing">Processing&#8230;</string>
    <string name="welcome">Welcome</string>
    <string name="present_one_card">Please present only one card</string>
    <string name="capk_failed">CAPK loading failed</string>
    <string name="last_pin_try">Last PIN try</string>
    <string name="battery_low">Device battery low, please charge</string>
    <string name="battery_critically_low">Device battery critically low and powered off</string>
    <string name="no_device_detected">No device detected.</string>
    <string name="device_plugged">Device plugged.</string>
    <string name="device_unplugged">Device unplugged.</string>
    <string name="command_not_available">Command not available</string>
    <string name="device_no_response">Device no response</string>
    <string name="device_reset">Device reset</string>
    <string name="unknown_error">Unknown error</string>
    <string name="device_busy">Device Busy</string>
    <string name="out_of_range">Input out of range.</string>
    <string name="invalid_format">Input invalid format.</string>
    <string name="zero_values">Input are zero values.</string>
    <string name="input_invalid">Input invalid.</string>
    <string name="cashback_not_supported">Cashback not supported.</string>
    <string name="crc_error">CRC Error.</string>
    <string name="comm_error">Communication Error.</string>
    <string name="device_off">Device powered off.</string>
    <string name="get_info">Get Device Info</string>
    <string name="clear_log">Clear Log</string>
    <string name="check_card">Start</string>
    <string name="start_emv">Start EMV</string>
    <string name="cancel">Cancel</string>
    <string name="pin">PIN</string>
    <string name="cashback_amount">Cashback</string>
    <string name="confirm">Confirm</string>
    <string name="bypass">Bypass</string>
    <string name="decline">Decline</string>
    <string name="getting_info">Getting device info&#8230;</string>
    <string name="starting">Starting&#8230;</string>
    <string name="power_on_icc">Power on ICC</string>
    <string name="power_off_icc">Power off ICC</string>
    <string name="send_apdu">Send APDU</string>
    <string name="sending_apdu">Sending APDU</string>
    <string name="power_on_icc_success">Power on ICC Success</string>
    <string name="power_on_icc_failed">Power on ICC Failed</string>
    <string name="power_off_icc_success">Power off ICC Success</string>
    <string name="power_off_icc_failed">Power off ICC Failed</string>
    <string name="apdu_result">APDU Result:</string>
    <string name="atr">ATR:</string>
    <string name="apdu_failed">APDU Failed</string>
    <string name="sending">Sending:</string>
    <string name="atr_length">ATR Length:</string>
    <string name="get_ksn">Get KSN</string>
    <string name="getting_ksn">Getting KSN&#8230;</string>
    <string name="powering_on_icc">Powering on ICC&#8230;</string>
    <string name="powering_off_icc">Powering off ICC&#8230;</string>
    <string name="card_not_supported">Card not support</string>
    <string name="missing_mandatory_data">Missing mandatory data</string>
    <string name="no_emv_apps">No EMV apps</string>
    <string name="invalid_icc_data">Invalid ICC data</string>
    <string name="condition_not_satisfied">Condition of use not satisfied</string>
    <string name="application_blocked">Application blocked</string>
    <string name="power_on_nfc">Power on NFC</string>
</resources>