<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/bt_pair_instructions"
        android:textSize="@dimen/regular_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="1)"
            android:textSize="@dimen/regular_text_size"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/bluetooth_pair_instructions_one"
            android:textSize="@dimen/small_text_size"
            android:gravity="start"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="2)"
            android:textSize="@dimen/regular_text_size"
            android:gravity="start"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="30dp"
            android:layout_height="match_parent"/>
        <TextView
            android:text="@string/bluetooth_pair_instructions_two"
            android:textSize="@dimen/small_text_size"
            android:gravity="start"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <ListView
        android:id="@+id/bluetooth_pair_list"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/paired_prompt"
        android:visibility="gone"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/checkmark"/>

        <TextView
            android:text="@string/bt_mag_reader_paired"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/regular_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>


