<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:text="@string/attempt_auto_connect"
        android:textSize="@dimen/regular_text_size"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/wizard_status"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/small_text_size"
            android:text="Searching for Bluetooth Reader.."/>

        <ProgressBar
            android:id="@+id/connecting_progress_bar"
            android:layout_height="50dp"
            android:layout_width="50dp"/>
        
    </LinearLayout>


    <LinearLayout
        android:id="@+id/wizard_helper"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/bluetooth_problems_prompt"
            android:textSize="@dimen/small_text_size"
            android:gravity="start"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="1)"
                android:textSize="@dimen/regular_text_size"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="30dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/bluetooth_help_one"
                android:textSize="@dimen/small_text_size"
                android:gravity="start"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="2)"
                android:textSize="@dimen/regular_text_size"
                android:gravity="start"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="30dp"
                android:layout_height="match_parent"/>
            <TextView
                android:text="@string/bluetooth_help_two"
                android:textSize="@dimen/small_text_size"
                android:gravity="start"
                android:layout_marginRight="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/bt_reader_holder_on"
            android:visibility="visible"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/reader_top_on"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <ImageView
            android:id="@+id/bt_reader_holder_off"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/reader_top_off"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </LinearLayout>

</LinearLayout>


